<resources>
    <string name="app_name">Drizza</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_artist">Artists</string>
    <string name="title_track">Tracks</string>
    <string name="title_playlist">Playlists</string>
    <string name="title_album">Albums</string>
    <string name="title_explore">Explore</string>
    <string name="cover">Cover</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter search text</string>
    <string name="album">Album</string>
    <string name="preview">Preview</string>
    <string name="textview_album">Album Title</string>
    <string name="textview_title">Track Title</string>
    <string name="textview_artist">Artist Name</string>
    <string name="provide_search_text">Provide Search Text</string>
    <string name="no_internet">No Internet Connection!</string>
</resources>