<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_track"
        android:icon="@drawable/ic_track_24"
        android:title="@string/title_track" />

    <item
        android:id="@+id/nav_album"
        android:icon="@drawable/ic_album_24"
        android:title="@string/title_album" />

    <item
        android:id="@+id/nav_artist"
        android:icon="@drawable/ic_artist_24"
        android:title="@string/title_artist" />

    <item
        android:id="@+id/nav_playlist"
        android:icon="@drawable/ic_playlist_24"
        android:title="@string/title_playlist" />


<!--    <item-->
<!--        android:id="@+id/nav_explore"-->
<!--        android:icon="@drawable/ic_explore_24dp"-->
<!--        android:title="@string/title_explore" />-->


</menu>